overlays/development/ops/nginx-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx-controller
  namespace: ingress-nginx
spec:
  externalIPs:
  - 192.168.68.120
