overlays/development/ops/grafana-ingress-patch.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
    - hameet.cluster.local
    secretName: edurusma-adalet-gov-tr-tls
  rules:
    - host: hameet.cluster.local
      http:
        paths:
        # only match /grafana and paths under /grafana/
        - path: /grafana(/|$)(.*)
          backend:
            serviceName: grafana
            servicePort: http
