overlays/development/ops/haproxy-ingress-patch.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: haproxy-ingress
  namespace: jitsi
spec:
  tls:
  - hosts:
    - hameet.cluster.local
    secretName: edurusma-adalet-gov-tr-tls
  rules:
    - host: hameet.cluster.local
      http:
        paths:
          - path: /
            backend:
              serviceName: haproxy
              servicePort: 80
